<resources>
    <string name="app_name">BookTrack</string>
    <string name="continuarLeyendo">Continuar Leyendo</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="pendientes">pendientes</string>
    <string name="favoritos">favoritos</string>
    <string name="detalles">detalles</string>
    <string name="buscador">buscador</string>
    <string name="descubrir">descubrir</string>
    <string name="marcarLeido">marcar leido</string>
    <string name="añadirPendientes">añadir pendientes</string>
    <string name="valorar">valorar</string>

    <string name="about_us_title">Sobre BookTrack</string>
    <string name="app_logo_description">Logo de la aplicación</string>
    <string name="app_description_long">BookTrack es tu compañero ideal para llevar un registro de todos los libros que has leído, los que estás leyendo y los que quieres leer en el futuro. ¡Organiza tu biblioteca personal y descubre nuevas lecturas!</string>
    <string name="developed_by">Desarrollado por</string>
    <string name="copyright">© 2025 Samuel. Todos los derechos reservados.</string>

    <!-- Cadenas para la barra de navegación -->
    <string name="buscar">Buscar</string>
    <string name="mis_libros">Mis Libros</string>
    <string name="inicio">Inicio</string>
    <string name="mapa">Mapa</string>
</resources>