<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallesLibro">

    <TextView
        android:id="@+id/txtTituloDetallesLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/detalles"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTituloLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Titulo:"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="129dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="129dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="301dp"
        android:layout_height="66dp"
        android:text="Descripcion"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="288dp" />

    <Button
        android:id="@+id/btnMarcarLeido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marcarLeido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="465dp" />

    <Button
        android:id="@+id/btnAñadirPendientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/añadirPendientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMarcarLeido" />

    <Button
        android:id="@+id/btnValorar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/valorar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAñadirPendientes" />

</androidx.constraintlayout.widget.ConstraintLayout>