<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <!-- Toolbar (Opcional pero recomendado) -->

        <!-- Logo de la App -->

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_logo_description"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toTopOf="@+id/tv_app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Nombre de la App -->
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            app:layout_constraintTop_toBottomOf="@id/iv_app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Versión de la App -->
        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Versión 0.1" />

        <!-- Descripción de la App -->
        <TextView
            android:id="@+id/tv_app_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_description_long"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintTop_toBottomOf="@id/tv_app_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Sección de Desarrollador -->
        <TextView
            android:id="@+id/tv_developed_by_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/developed_by"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintTop_toBottomOf="@id/tv_app_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Samuel"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toBottomOf="@id/tv_developed_by_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Copyright -->

        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/copyright"
            android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_developer_name"
            app:layout_constraintVertical_bias="0.164" />

        <LinearLayout
            android:id="@+id/lyh_Toolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:id="@+id/icon_search"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/ic_search_icon"
                tools:srcCompat="@drawable/ic_search_icon" />

            <ImageView
                android:id="@+id/icon_books"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/ic_explorar_icon"
                tools:srcCompat="@drawable/ic_explorar_icon" />

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/ic_home_icon"
                tools:srcCompat="@drawable/ic_home_icon" />

            <ImageView
                android:id="@+id/icon_map"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/ic_map_icon"
                tools:srcCompat="@drawable/ic_map_icon" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
