<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloApp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtContinuarLeyendo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/continuarLeyendo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvContinuarLeyendo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContinuarLeyendo"
        tools:listitem="@layout/item_libro_portada"
        tools:orientation="horizontal"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvContinuarLeyendo" />

    <TextView
        android:id="@+id/txtRecomendaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/recomendaciones"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecomendaciones"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecomendaciones"
        tools:listitem="@layout/item_libro_portada"
        tools:orientation="horizontal"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvRecomendaciones" />

    <TextView
        android:id="@+id/txtPendientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/pendientes"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPendientes"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPendientes"
        tools:listitem="@layout/item_libro_portada"
        tools:orientation="horizontal"/>

    <LinearLayout
        android:id="@+id/lyh_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/icon_search"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_search_icon"
            tools:srcCompat="@drawable/ic_search_icon" />

        <ImageView
            android:id="@+id/icon_books"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_explorar_icon"
            tools:srcCompat="@drawable/ic_explorar_icon" />

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_home_icon"
            tools:srcCompat="@drawable/ic_home_icon" />

        <ImageView
            android:id="@+id/icon_map"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_map_icon"
            tools:srcCompat="@drawable/ic_map_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
